--- a/case.ipynb
+++ b/case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
     "ax1.plot(df_extra['alpha'],  df_extra['Cl'], 'r--', label = 'Extrapolation')\n",
     "ax1.plot(c_lift_drag[re][0][:, 0],  c_lift_drag[re][0][:, 1], 'k',  label = 'Original')\n",
     "\n",
-    "ax1.set_xlabel(r'$\\alpha$')\n",
+    "ax1.set_xlabel(r'$\\alpha$ [deg]')\n",
     "ax1.set_ylabel(r'$C_L$')\n",
     "ax1.legend()\n",
     "ax1.grid()\n",
@@ -112,7 +112,7 @@
     "ax2.plot(df_extra['alpha'],  df_extra['Cd'], 'r--', label = 'Extrapolation')\n",
     "ax2.plot(c_lift_drag[re][0][:, 0],  c_lift_drag[re][0][:, 2], 'k', label = 'Original')\n",
     "\n",
-    "ax2.set_xlabel(r'$\\alpha$')\n",
+    "ax2.set_xlabel(r'$\\alpha$ [deg]')\n",
     "ax2.set_ylabel(r'$C_D$')\n",
     "ax2.legend()\n",
     "ax2.grid()\n",
