--- a/case.ipynb
+++ b/case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from scipy.interpolate import interp1d\n",
     "\n",
     "from blade_design import blade_design, airfoil_path, process_file\n",
-    "from bemt import coefficients_extrapolation"
+    "from bemt import coefficients_extrapolation, bemt"
    ]
   },
   {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,11 +185,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Validate BEMT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'list' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m airfoil_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms834\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      2\u001b[0m rotor \u001b[38;5;241m=\u001b[39m blade_design(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms834\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m2\u001b[39m, number_of_sections\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m300\u001b[39m,plot\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mbemt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrotor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mairfoil_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# rotor\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\widma\\Documents\\github\\BEMT\\bemt.py:80\u001b[0m, in \u001b[0;36mbemt\u001b[1;34m(rotor, airfoil_name, number_of_blades, threeD_correction, tip_correction_model, iter, tol)\u001b[0m\n\u001b[0;32m     78\u001b[0m \u001b[38;5;66;03m#  Step 7 - Check convergence: Root Mean Square Error\u001b[39;00m\n\u001b[0;32m     79\u001b[0m error\u001b[38;5;241m.\u001b[39mappend(np\u001b[38;5;241m.\u001b[39msqrt(np\u001b[38;5;241m.\u001b[39msum((a_new \u001b[38;5;241m-\u001b[39m a)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(a)))\n\u001b[1;32m---> 80\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m error[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m<\u001b[39m tol:\n\u001b[0;32m     81\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'list' and 'float'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# rotor"
+   ]
   }
  ],
  "metadata": {
@@ -208,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
