--- a/case.ipynb
+++ b/case.ipynb
@@ -65,10 +65,10 @@
    ],
    "source": [
     "rotor = Rotor(number_of_blades=3, number_of_sections=50, tip_speed_ratio=6, alpha_opt=4, Cl_opt=0.8, Cd_opt=0.012)\n",
-    "rotor.blade_design(plot=False)\n",
+    "rotor.blade_design(plot=False, solidity='Cn')\n",
     "\n",
-    "chord_hansen_validate = np.loadtxt(validate_path.joinpath('chord_distribution_hansen.dat'))\n",
-    "pitch_hansen_validate = np.loadtxt(validate_path.joinpath('pitch_distribution_hansen.dat'))\n",
+    "chord_hansen_validate = np.loadtxt(validate_path.joinpath('chord_distribution_Hansen.dat'))\n",
+    "pitch_hansen_validate = np.loadtxt(validate_path.joinpath('pitch_distribution_Hansen.dat'))\n",
     "\n",
     "# Pitch Angle Distribution\n",
     "plt.plot(rotor.sections['r_R'], rotor.sections['theta_opt'], 'k', label = 'Code')\n",
@@ -241,10 +241,9 @@
     "# ax2.set_ylim([0, 0.6])\n",
     "# ax2.legend()\n",
     "ax2.grid()\n",
-    "\n",
-    "\n",
-    "plt.show()\n",
-    "\n"
+    "# usar g(alpha)_1 para valores positivos e g(alpha)_2 para valores negativos\n",
+    "# alpha +/- 90\n",
+    "plt.show()"
    ]
   },
   {
@@ -367,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bemt-B0GCKdT5-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
